# pico_teleop_ur5

./: .gitignore  README.md  pyproject.toml  requirements-data.txt  requirements-lerobot.txt  requirements-real.txt  requirements.txt
config/: teleop.example.yaml
docs/: end_to_end_workflow.md  lerobot_smolvla.md
quest_ur5e_teleop/: __init__.py  __main__.py  app.py  config.py  controller.py  recording.py  robot.py  transforms.py
quest_ur5e_teleop/tools/: __init__.py  export_lerobot.py
scripts/: make_self_signed_cert.sh  train_smolvla.sh
tests/: test_controller.py  test_recording.py  test_transforms.py
web/: app.js  index.html  styles.css
