[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-ur5e-teleop"
version = "0.1.0"
description = "Meta Quest WebXR teleoperation gateway for UR5e robots over UR RTDE."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
real = [
  "ur-rtde>=1.5.8",
]
data = [
  "opencv-python>=4.9",
  "Pillow>=10.0",
]
lerobot = [
  "lerobot>=0.5.0",
  "Pillow>=10.0",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
quest-ur5e-teleop = "quest_ur5e_teleop.__main__:main"
quest-ur5e-export-lerobot = "quest_ur5e_teleop.tools.export_lerobot:main"

[tool.setuptools]
packages = ["quest_ur5e_teleop", "quest_ur5e_teleop.tools"]
